# license_plates

./: .gitignore  Cargo.toml  Justfile  README.md
src/: args.rs  consts.rs  inference.rs  main.rs  prepare.rs  train.rs
src/networks/: custom.rs  fast_resnet.rs  mod.rs  resnet.rs  vgg.rs
